syntax = "proto3";
option java_multiple_files = true;
package com.example.systemeventsservice.grpc;

message SystemEventRequest {
  string timestamp = 1;
  string microservice = 2;
  string user = 3;
  string action = 4;
  string resource = 5;
  string responseType = 6;
}

message SystemEventResponse {
  string responsemessage = 1;
}

service SystemEventService {
  rpc log(SystemEventRequest) returns (SystemEventResponse);
}